<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="22dp"
    android:paddingStart="22dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTV"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="30dp"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_tv"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/input_field_background"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/e_mail_tv"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/input_field_background"
        android:inputType="text"/>
    <Button
        android:onClick="onLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_btn"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/brown" />




</LinearLayout>